<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.Home"
    tools:showIn="@layout/home">

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="93dp"
        android:layout_height="119dp"
        android:background="@color/colorFontOffWhite"
        android:drawableTop="@drawable/searchbtn72"
        android:onClick="search"
        android:text="@string/searchCreaturesLbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="93dp"
        android:layout_height="119dp"
        android:background="@color/colorFontOffWhite"
        android:drawableTop="@drawable/add72"
        android:onClick="add"
        android:text="@string/addCreatureLbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/favouritesBtn"
        android:layout_width="93dp"
        android:layout_height="119dp"
        android:background="@color/colorFontOffWhite"
        android:drawableTop="@drawable/favouritebtn72"
        android:onClick="favourites"
        android:text="@string/markedCreaturesLbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/addBarTV"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:background="@color/colorFontRed"
        android:text="@string/recentlyViewedLbl"
        android:textAlignment="center"
        android:textColor="@color/colorFontWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBtn"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/colorFontRed"
        android:paddingTop="5dp"
        android:text="@string/appWebsite"
        android:textAlignment="center"
        android:textColor="@color/colorFontWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBarTV"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/emptyList"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/emptyMessageLbl"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>